# artifacts/api-server/src/routes/index.ts
@@ -2,7 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import memberRouter from "./member";
-import publicRouter from "./public";
+import developerInfoRouter from "./developer-info";
 import chatRouter from "./chat";
 import newsRouter from "./news";
 import articlesRouter from "./articles";
@@ -14,7 +14,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(authRouter);
 router.use(memberRouter);
-router.use(publicRouter);
+router.use(developerInfoRouter);
 router.use(chatRouter);
 router.use(newsRouter);
 router.use(articlesRouter);
